--- a/display.html
+++ b/display.html
@@ -1,46 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digital Scrapbook</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f4f4f9;
-    }
-    .content {
-      text-align: center;
-    }
-    .video {
-      height: inherit;
-      width: inherit;
-      border-radius: 8px;
-    }
-    .img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-  }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Birthday Surprise Video</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            color: #ff6347;
+        }
+        .video-container {
+            margin: 20px auto;
+            max-width: 800px;
+        }
+    </style>
 </head>
-
 <body>
-  <div class="content">
-    <h1>Welcome to Your Digital Scrapbook</h1>
-    <!-- Uncomment one of the following based on your choice -->
-    <!-- Display Video -->
-    <video controls>
-      <source src="c:\Users\bably rangpi\OneDrive\Pictures\phone pics\car\20240410_101520.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <!-- Display Image -->
-    <!-- <img src="your-image.jpg" alt="Scrapbook Picture"> -->
-  </div>
+
+    <h1>Watch the Birthday Surprise Video!</h1>
+
+    <!-- Embed the video from GitHub -->
+    <div class="video-container">
+        <video width="100%" height="auto" controls>
+            <source src="https://raw.githubusercontent.com/ba6ly/surprise_/main/InShot_20250111_215005469.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
 </body>
 </html>
